--- a/data_bifurcated/README.Rmd
+++ b/data_bifurcated/README.Rmd
@@ -33,7 +33,7 @@ model <- add_root(model,root_milestone_id = '3')
 model <- add_pseudotime(model)
 ```
 
-Now, we assign branch groupings corresponding to the trajectory progress between milestones and extract cells corresponding to the individual subtrajectories in cell_T1 and cells_T2
+Now, we assign branch groupings corresponding to the trajectory progress between milestones and extract cells corresponding to the individual subtrajectories in cells_T1 and cells_T2
 ```{r}
 branch_groupings = group_onto_trajectory_edges(model, group_template = "{from}->{to}")
 T1 = branch_groupings[which(branch_groupings %in% c("1->4","2->1","3->2"))]
